--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 			<artifactId>jedis</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
