--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.2.7</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.33</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
