in maven settings add utf-8 as project encoding

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.33</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -37,4 +36,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
