--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
 		<!-- mybatis -->
 		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>2.7.3</version>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.3.0</version>
 		</dependency>
 
 		<!-- mysql connector -->
@@ -41,11 +41,18 @@
 			<version>1.16.6</version>
 		</dependency>
 
-		<!-- fastjson -->
+		<!-- fastjson 阿里巴巴出品的json解析,转换工具 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
+		</dependency>
+
+		<!-- org.json json解析,转换工具 -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20141113</version>
 		</dependency>
 
 		<!-- apache commons lang -->
