--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
 			<version>1.1.3</version>
 		</dependency>
 		<!-- logback end -->
+
+		<!-- Spring start -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.2.1.RELEASE</version>
+		</dependency>
+		<!-- Spring end -->
 	</dependencies>
 
 	<build>
