--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 			<artifactId>jedis</artifactId>
 			<version>2.7.3</version>
 		</dependency>
-		
+
+		<!-- Druid alibaba connection pool -->
 		<dependency>
-	<groupId>com.alibaba</groupId>
-	<artifactId>druid</artifactId>
-	<version>1.0.15</version>
-</dependency>
-		
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.15</version>
+		</dependency>
 
 		<!-- mybatis -->
 		<dependency>
