--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,14 @@
 			<version>4.2.1.RELEASE</version>
 		</dependency>
 		<!-- Spring end -->
+
+		<!-- httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
