--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
 			<version>4.5.1</version>
 		</dependency>
 		<!-- httpclient end -->
+
+		<!-- joda time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
