--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,14 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.6</version>
+			<version>1.16.8</version>
 		</dependency>
 
 		<!-- fastjson 阿里巴巴出品的json解析,转换工具 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.7</version>
+			<version>1.2.11</version>
 		</dependency>
 
 		<!-- org.json json解析,转换工具 -->
@@ -80,20 +80,20 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.12</version>
+			<version>1.7.18</version>
 		</dependency>
 
 		<!-- logback start -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.6</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.6</version>
 		</dependency>
 		<!-- logback end -->
 
@@ -141,6 +141,14 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+
+		<!-- LZ4 -->
+		<dependency>
+			<groupId>net.jpountz.lz4</groupId>
+			<artifactId>lz4</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
