--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Incubator</groupId>
-	<artifactId>Incubator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.github.taojintianxia.Incubator</groupId>
+	<artifactId>Incubator-parent</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
 	</properties>
 
 	<dependencies>
+		<!-- google guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+
 		<!-- jedis redis client -->
 		<dependency>
 			<groupId>redis.clients</groupId>
@@ -153,6 +160,13 @@
 			<groupId>net.jpountz.lz4</groupId>
 			<artifactId>lz4</artifactId>
 			<version>1.3.0</version>
+		</dependency>
+
+		<!-- ssh -->
+		<dependency>
+			<groupId>ch.ethz.ganymed</groupId>
+			<artifactId>ganymed-ssh2</artifactId>
+			<version>build210</version>
 		</dependency>
 
 	</dependencies>
