--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,3 @@
-maven.home=/Users/nianjun/Work/tools/apache-maven-3.5.0
+#maven.home=/Users/nianjun/Work/tools/apache-maven-3.5.0
+home=jjjj
+name=justest
