--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>1.5.20.RELEASE</version>
 		<!-- lookup parent from repository -->
 		<relativePath />
 	</parent>
@@ -20,24 +20,26 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
-		<snowflake.version>0.2.0</snowflake.version>
+        <guava.version>27.1-jre</guava.version>
+        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
+        <maven-model.version>3.6.1</maven-model.version>
 	</properties>
 
 	<dependencies>
 		<!-- google guava -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
 
 		<!-- apache maven model -->
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
-			<version>3.5.0</version>
+			<version>${maven-model.version}</version>
 		</dependency>
 
 		<!-- jedis redis client -->
@@ -246,6 +248,17 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions-maven-plugin.version}</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 </project>
