--- a/incubator-guava/pom.xml
+++ b/incubator-guava/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>incubator-parent</artifactId>
         <groupId>com.github.taojintianxia.incubator</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>1.0.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
