--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.github.taojintianxia.incubator</groupId>
     <artifactId>incubator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
 
     <modules>
         <module>incubator-guava</module>
