--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 
     <modules>
         <module>incubator-guava</module>
+        <module>incubator-netty</module>
     </modules>
 
     <properties>
@@ -51,6 +52,7 @@
                 <version>${guava.version}</version>
             </dependency>
 
+            <!-- netty -->
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
