--- a/incubator-netty/pom.xml
+++ b/incubator-netty/pom.xml
@@ -7,18 +7,22 @@
         <groupId>com.github.taojintianxia.incubator</groupId>
         <version>1.0.0-RELEASE</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <packaging>jar</packaging>
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>incubator-netty</artifactId>
 
     <dependencies>
-
         <!-- netty -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
-
-
 </project>
