Refactor: update the package of guava example

--- a/incubator-swagger/pom.xml
+++ b/incubator-swagger/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>incubator-swagger</artifactId>
 
     <dependencies>
+        <!-- Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        
+        <!-- swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
