Add: add junit for testing

--- a/incubator-mongodb/pom.xml
+++ b/incubator-mongodb/pom.xml
@@ -45,5 +45,10 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
     </dependencies>
 </project>
