Refactor: remove the auth

--- a/incubator-mongodb/src/main/resources/application.properties
+++ b/incubator-mongodb/src/main/resources/application.properties
@@ -3,4 +3,4 @@
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=root
 
-spring.data.mongodb.uri=mongodb://root:root@localhost:27017/helloworld
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/helloworld
