--- a/incubator-nacos/pom.xml
+++ b/incubator-nacos/pom.xml
@@ -23,6 +23,17 @@
             <artifactId>nacos-config-spring-boot-starter</artifactId>
             <version>0.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>0.1.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 
